--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="25">
     <tr>
-      <td><img src="https://instagram.fblr1-4.fna.fbcdn.net/v/t51.2885-19/s320x320/67521577_417896918827407_1361482698434019328_n.jpg?_nc_ht=instagram.fblr1-4.fna.fbcdn.net&_nc_ohc=Dz4ep1rbRKAAX8JbteW&oh=3a75960752ca5d04c5726fd4aed4e6f1&oe=5F91CDCB"  alt="profile"></td>
+      <td><img src="C:\Users\anush\Documents\Web Development\IMAGES\Anush.jpg" Height="200" alt="profile"></td>
     <td><h1>Anush G S </h1>
       <p><em>Beginner in <strong>web development</strong></em></p>
       <p>Hi beginner to web development.Getting better everyday with udemy 😀</p>
