--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </tr>
 </table>
 <hr>
-  <h3><a href="Hobbies.html">MY HOBBIES</a></h3>
+  <h3><a href="hobbies.html">MY HOBBIES</a></h3>
   <h3><a href="Contact info.html">CONTACT INFO</a> </h3>
 
 </body>
